--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,6 +56,7 @@ jobs:
       -
         name: Login to DockerHub
         uses: docker/login-action@v2
+        if: github.event_name != 'pull_request'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -83,6 +84,7 @@ jobs:
       -
         name: Build and push DockerHub
         uses: docker/build-push-action@v3
+        if: github.event_name != 'pull_request'
         with:
           context: .
           # Due to build time, only building the one currently needed.
